Аттестация03 с ошибками в тестах